--- a/datastore/build.gradle
+++ b/datastore/build.gradle
@@ -2,4 +2,8 @@ dependencies {
     compile project(":common")
     compile group: 'com.clickntap', name: 'vimeo', version: '1.10'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: "${springBootVersion}"
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.40'
+    compile group: 'org.apache.thrift', name: 'libthrift', version: '0.9.3'
 }
