--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,3 +1,8 @@
+bootJar {
+    manifest {
+    }
+}
+
 dependencies {
     compile group: 'io.github.microutils', name: 'kotlin-logging', version: '1.4.6'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
