--- a/gatherer/build.gradle
+++ b/gatherer/build.gradle
@@ -1,3 +1,9 @@
+bootJar {
+    manifest {
+        attributes("Start-Class": "com.xiaoyuz.puppy.gatherer.GathererApplication")
+    }
+}
+
 dependencies {
     compile project(":datastore")
     compile group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.30'
