--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'kotlin'
     apply plugin: 'kotlin-spring'
+    apply plugin: 'io.spring.dependency-management'
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
