--- a/gatherer/build.gradle
+++ b/gatherer/build.gradle
@@ -1,3 +1,5 @@
+apply plugin: 'org.springframework.boot'
+
 dependencies {
     compile project(":datastore")
     compile group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.30'
