--- a/datastore/src/main/resources/datastore.properties
+++ b/datastore/src/main/resources/datastore.properties
@@ -8,3 +8,12 @@ spring.jpa.hibernate.show_sql=true
 spring.jpa.hibernate.use_sql_comments=true
 spring.jpa.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#redis
+spring.redis.host = localhost
+spring.redis.port = 6379
+spring.redis.database = 0
+spring.redis.pool.max-idle = 8
+spring.redis.pool.min-idle = 0
+spring.redis.pool.max-active = 8
+spring.redis.pool.max-wait = -1
