Add switch for crawler,

--- a/gatherer/src/main/resources/application.properties
+++ b/gatherer/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # server
 server.port=8180
 
-schedule.task.vimeo.crawler.enable=false
-schedule.task.imgur.crawler.enable=false
-schedule.task.9gag.crawler.enable=false
+schedule.task.vimeo.crawler.enable=true
+schedule.task.imgur.crawler.enable=true
+schedule.task.9gag.crawler.enable=true
 
 third_party.vimeo.token=084ebb071c7078b984e48f0ef953eb8b
 third_party.vimeo.app.id=024e6101835d25e4d64dac5ecb5eaebecf9fdd92
