Fix index key type

--- a/gatherer/src/main/resources/application.properties
+++ b/gatherer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 third_party.vimeo.token=084ebb071c7078b984e48f0ef953eb8b
 third_party.vimeo.app.id=024e6101835d25e4d64dac5ecb5eaebecf9fdd92
