add new api for animation posts.

--- a/gatherer/src/main/resources/application.properties
+++ b/gatherer/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=prod
+# server
+server.port=18180
 
 third_party.vimeo.token=084ebb071c7078b984e48f0ef953eb8b
 third_party.vimeo.app.id=024e6101835d25e4d64dac5ecb5eaebecf9fdd92
@@ -9,3 +10,10 @@ third_party.imgur.app.id=27c1777651f98e8
 third_party.imgur.secret=83f107c59a8bee9a25a92890c440577456861a76
 
 third_party.9gag.api.host=https://9gag.com/v1/
+
+schedule.task.vimeo.crawler.enable=true
+schedule.task.imgur.crawler.enable=true
+schedule.task.9gag.crawler.enable=true
+
+logging.level.root=INFO
+logging.file=/var/log/gatherer.log
