Download resources in crawler.

--- a/gatherer/src/main/resources/application.properties
+++ b/gatherer/src/main/resources/application.properties
@@ -17,3 +17,5 @@ schedule.task.9gag.crawler.enable=true
 
 logging.level.root=INFO
 logging.file=/var/log/gatherer.log
+
+post.resouce.path=/resources/puppyres
