--- a/datastore/build.gradle
+++ b/datastore/build.gradle
@@ -6,4 +6,5 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: "${springBootVersion}"
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.40'
     compile group: 'org.apache.thrift', name: 'libthrift', version: '0.9.3'
+    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 }
