--- a/datastore/src/main/resources/datastore.properties
+++ b/datastore/src/main/resources/datastore.properties
@@ -17,3 +17,5 @@ spring.redis.pool.max-idle = 8
 spring.redis.pool.min-idle = 0
 spring.redis.pool.max-active = 8
 spring.redis.pool.max-wait = -1
+
+post.resource.path=/Users/zhangxiaoyu/servers/puppyres
