--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ subprojects {
         compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.4"
         compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
         compile("org.jetbrains.kotlin:kotlin-reflect")
+        compile group: 'org.apache.commons', name: 'commons-text', version: '1.3'
         compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
         compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: "${springBootVersion}"
         compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: "${springBootVersion}"
