--- a/datastore/src/main/resources/datastore.properties
+++ b/datastore/src/main/resources/datastore.properties
@@ -1,5 +1,5 @@
 # mysql jpa
-spring.datasource.url=jdbc:mysql://localhost:3306/puppy_db?useSSL=false&tinyInt1isBit=false
+spring.datasource.url=jdbc:mysql://localhost:3306/puppy_db?useSSL=false&tinyInt1isBit=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=operaopera
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
